--- a/client/scss/_mixins.scss
+++ b/client/scss/_mixins.scss
@@ -90,3 +90,47 @@
 	-o-touch-callout: none;
 	touch-callout: none;
 }
+
+// Float Clearfix
+@mixin clearfix() {
+	zoom: 1;
+	*zoom: 1;
+	&:after,
+	&:before {
+		content: "";
+		display: table;
+	}
+	&:after {
+		clear: both;
+	}
+}
+
+@mixin vertical-center($method: 'table') {
+
+	text-align: center;
+	width: 100%;
+	height: 100%;
+
+	// Transform method
+	@if $method == 'transform' {
+		position: relative;
+		// -webkit-font-smoothing: subpixel-antialiased;
+		transform: translateZ(0) scale(1.0, 1.0);
+		-webkit-backface-visibility: hidden;
+		> * {
+			top: 50%;
+			transform: translateY(-50%);
+			-webkit-backface-visibility: hidden;
+		}
+
+	// Table method
+	} @else {
+		display: table;
+
+		> * {
+			display: table-cell;
+			vertical-align: middle;
+		}
+
+	}
+}
