--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -23,6 +23,7 @@ body {
 	width: 100%;
 	height: 100%;
 	-webkit-overflow-scrolling: auto;
+	overflow: hidden;
 }
 
 body {
@@ -96,14 +97,25 @@ textarea {
 	background-size: cover;
 }
 
+/* Video */
+.video {
+	width: auto;
+	height: auto;
+	min-width: 100%;
+	min-height: 100%;
+	background: black;
+}
+
+
+/* Overlay */
 .overlay {
-	background: rgba(126,126,126,0.5);
+	background: rgba(gray,0.34);
 }
 
 /* Compass */
 .compass {
 	background: transparent url('../img/compass.png') center center no-repeat;
-	background-size: auto 80%;
+	background-size: auto 75%;
 }
 
 /* Control Joysticks */
@@ -118,6 +130,7 @@ textarea {
 	backdrop-filter: blur(2px);*/
 	-webkit-border-radius: 100px;
 	border-radius: 100px;
+	z-index: 10;
 }
 .control-left {
 	left: 0;
